<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/colorPrimary">



    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="357dp"
        android:layout_height="425dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="185dp"
        android:layout_height="217dp"
        android:layout_marginTop="220dp"
        android:alpha="0.80"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"

            >

            <Button
                android:id="@+id/play"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:background="#d2a36d"
                android:drawableTop="@drawable/play"
                android:text="@string/play"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="21dp"

            >

            <Button
                android:id="@+id/account"
                android:layout_width="169dp"
                android:layout_height="90dp"
                android:background="#d2a36d"
                android:drawableTop="@drawable/account"
                android:text="@string/account"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="21dp">

            <Button
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="#d2a36d"
                android:drawableTop="@drawable/settings"
                android:text="@string/settings"
                android:textSize="12sp"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>